[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptable-traceback"
version = "1.0.0"
description = "Python package that optimises AI-assisted coding."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.7"
authors = [
  { name="Justin Kamper", email="justinjkamper@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["promptable_traceback"]